upload what's up template
upload what's up template

--- a/WEMANAGEGIT/WEMANAGEGIT/src/main/resources/templates/uploadview.html
+++ b/WEMANAGEGIT/WEMANAGEGIT/src/main/resources/templates/uploadview.html
@@ -2,7 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8"></meta>
-<title>Upload Files</title>
+<title>Upload Files WE MANAGE PIDEV</title>
+<link rel="shortcut icon" href="/images/favi.png" />
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+      <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <!-- Typography CSS -->
+    <link rel="stylesheet" href="/css/typography.css">
+    <!-- Style CSS -->
+    <link rel="stylesheet" href="/css/style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
    <form action="/upload" method="post" enctype="multipart/form-data">
